2010-11-02  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        querySelectorAll('body>:last-child') does not work unless HTML file ends with 'new-line'.
        https://bugs.webkit.org/show_bug.cgi?id=47166

        We need to pop all the open elements when we end the document in the
        AfterAfterBody state.

        Test: fast/parser/pop-all-after-after-body.html

        * html/parser/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processEndOfFile):
2010-11-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        querySelectorAll('body>:last-child') does not work unless HTML file ends with 'new-line'.
        https://bugs.webkit.org/show_bug.cgi?id=47166

        Test that :last-child works when we end the document in the
        AfterAfterBody state.

        * fast/parser/pop-all-after-after-body-expected.txt: Added.
        * fast/parser/pop-all-after-after-body.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@71147 bbb929c8-8fbe-4397-9dbb-9b2b20218538