third_party/WebKit/WebCore/html/parser/HTMLTreeBuilder.cpp
@@ -2581,7 +2581,7 @@ void HTMLTreeBuilder::processEndOfFile(AtomicHTMLToken& token)
     case AfterBodyMode:
     case AfterAfterBodyMode:
         ASSERT(insertionMode() == AfterBodyMode || insertionMode() == AfterAfterBodyMode);
-        return;
+        break;
     case InHeadNoscriptMode:
         ASSERT(insertionMode() == InHeadNoscriptMode);
         defaultForInHeadNoscript();
@@ -2603,11 +2603,11 @@ void HTMLTreeBuilder::processEndOfFile(AtomicHTMLToken& token)
     case InColumnGroupMode:
         if (m_tree.currentElement() == m_tree.openElements()->htmlElement()) {
             ASSERT(isParsingFragment());
-            return;
+            return; // FIXME: Should we break here instead of returning?
         }
         if (!processColgroupEndTagForInColumnGroup()) {
             ASSERT(isParsingFragment());
-            return;
+            return; // FIXME: Should we break here instead of returning?
         }
         prepareToReprocessToken();
         processEndOfFile(token);
